@@ -6,6 +6,7 @@ New features:
 - Basic stack elements can now hold additional data.
 - Added transition and state behaviours to edit a stack.
 - Added hierarchical stack method to get insert levels.
+- Stack definition can now set roles that can manage the stack.
 Bug fixes:
 ~~~~~~~~~~
 -
